--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -4,8 +4,10 @@
     "com.unity.animation.rigging": "1.3.0",
     "com.unity.cinemachine": "2.10.3",
     "com.unity.ide.visualstudio": "2.0.22",
+    "com.unity.probuilder": "5.2.3",
     "com.unity.render-pipelines.universal": "16.0.6",
     "com.unity.timeline": "1.8.7",
+    "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.10",
     "com.unity.ugui": "2.0.0",
     "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
